[gd_scene load_steps=39 format=3 uid="uid://bqabjhnl2np3x"]

[ext_resource type="Script" path="res://XR Pattern.gd" id="1_8j6n6"]
[ext_resource type="AudioStream" uid="uid://bd2qnjusutdfp" path="res://beethoven-moonlight-sonata-1-movement-op-27-nr-2-180627.mp3" id="2_cxgu3"]
[ext_resource type="PackedScene" uid="uid://bvgxo2kfaflxy" path="res://art_studio/scene.gltf" id="2_dp2d3"]
[ext_resource type="PackedScene" uid="uid://cf1314vkwgdby" path="res://Components/xr_basics_with_hands.tscn" id="3_3v7qa"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_750al"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_q03vd"]
sky_material = SubResource("ProceduralSkyMaterial_750al")

[sub_resource type="Environment" id="Environment_gddmy"]
background_mode = 2
sky = SubResource("Sky_q03vd")
tonemap_mode = 2

[sub_resource type="TorusMesh" id="TorusMesh_h7b8v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ll7pj"]
albedo_color = Color(0, 0.854902, 0.854902, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yljfx"]
height = 0.476399
radius = 0.960758

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p2od6"]
albedo_color = Color(0, 0.854902, 0.854902, 1)

[sub_resource type="TextMesh" id="TextMesh_w1khc"]
material = SubResource("StandardMaterial3D_p2od6")
text = "Light OFF"

[sub_resource type="SphereMesh" id="SphereMesh_j51vj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_38ajr"]
albedo_color = Color(0.980392, 0.890196, 0.352941, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5p1ju"]
albedo_color = Color(0.980392, 0.890196, 0.352941, 1)

[sub_resource type="TextMesh" id="TextMesh_2rdrl"]
material = SubResource("StandardMaterial3D_5p1ju")
text = "Light ON"
font_size = 17

[sub_resource type="SphereShape3D" id="SphereShape3D_5wf40"]

[sub_resource type="PrismMesh" id="PrismMesh_ef4gd"]
size = Vector3(0.125, 0.125, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xn3y2"]
albedo_color = Color(0.952941, 0.517647, 0.654902, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_drrlv"]
radius = 0.366499

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t2ljj"]
albedo_color = Color(0.952941, 0.517647, 0.654902, 1)

[sub_resource type="TextMesh" id="TextMesh_uq5dt"]
material = SubResource("StandardMaterial3D_t2ljj")
text = "Music ON"

[sub_resource type="BoxMesh" id="BoxMesh_oceaa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3tgb"]
albedo_color = Color(0.992157, 0.517647, 0.411765, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1hvea"]
size = Vector3(1, 1.22607, 1.30566)

[sub_resource type="TextMesh" id="TextMesh_xd4m3"]
text = "Music OFF"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_niumq"]
albedo_color = Color(0.992157, 0.517647, 0.411765, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_jh5xr"]
radius = 0.142647

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qr43m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqrq0"]
albedo_color = Color(0.556863, 1, 0.454902, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gkuks"]
albedo_color = Color(0.556863, 1, 0.454902, 1)

[sub_resource type="TextMesh" id="TextMesh_cixgh"]
material = SubResource("StandardMaterial3D_gkuks")
text = "Get Crazy"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_apygw"]
radius = 0.69397
height = 2.58493

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_wk64y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_msaaa"]
albedo_color = Color(0.607843, 0.654902, 1, 1)

[sub_resource type="TextMesh" id="TextMesh_nqq8v"]
text = "Stop"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ws3ok"]
albedo_color = Color(0.607843, 0.654902, 1, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ip68"]
radius = 0.628431

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.998561, 0.0149903, 0)
script = ExtResource("1_8j6n6")

[node name="XROrigin3D" parent="." instance=ExtResource("3_3v7qa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.165431, 0.213339, 9.27663)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.289023, 0.924128, 10.0365)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.433244, 1.24455, 9.15019)
stream = ExtResource("2_cxgu3")
volume_db = 0.762
max_db = 6.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gddmy")

[node name="Studio Model" parent="." instance=ExtResource("2_dp2d3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.231685, -0.0149903, 6.1317)
metadata/_edit_lock_ = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97509, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.944019, 2.82055, 8.37708)

[node name="SpotLight3D3" type="SpotLight3D" parent="SpotLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29623, -0.0307119, 0.187967)

[node name="SpotLight3D2" type="SpotLight3D" parent="SpotLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.37985, 0.0156851, -1.8853)

[node name="SpotLight3D" type="SpotLight3D" parent="SpotLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0836194, 0.0463967, -2.07327)

[node name="Torus" type="CSGMesh3D" parent="."]
transform = Transform3D(-0.1, -8.74228e-09, 3.82137e-16, -1.5246e-24, -4.37114e-09, -0.1, 8.74228e-09, -0.1, 4.37114e-09, 0.102759, 1.10492, 9.16859)
mesh = SubResource("TorusMesh_h7b8v")
material = SubResource("StandardMaterial3D_ll7pj")

[node name="TorusArea3D" type="Area3D" parent="Torus"]
transform = Transform3D(1, 1.29082e-14, -5.98345e-22, -1.59872e-14, 1, -7.99361e-15, -1.74828e-22, 6.45408e-15, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Torus/TorusArea3D"]
transform = Transform3D(1, 4.66697e-14, 5.35622e-21, -4.66697e-14, 1, -3.2475e-14, -5.35623e-21, 3.2475e-14, 1, 0, -0.0147552, 0.0114002)
shape = SubResource("CylinderShape3D_yljfx")

[node name="Light Off" type="CSGMesh3D" parent="Torus"]
transform = Transform3D(-2, 1.09488e-21, 1.74846e-07, -1.74846e-07, -8.74228e-08, -2, 7.64274e-15, -2, 8.74228e-08, -0.249175, 0.147705, 1.43926)
mesh = SubResource("TextMesh_w1khc")

[node name="Sphere" type="CSGMesh3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.297638, 1.11481, 9.14441)
mesh = SubResource("SphereMesh_j51vj")
material = SubResource("StandardMaterial3D_38ajr")

[node name="Light On" type="CSGMesh3D" parent="Sphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0183263, -0.771196, -0.0429153)
mesh = SubResource("TextMesh_2rdrl")

[node name="sphereArea3D" type="Area3D" parent="Sphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0183263, -0.771196, -0.0429153)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sphere/sphereArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76823, 0.0511513)
shape = SubResource("SphereShape3D_5wf40")

[node name="Prism" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.435346, 1.10365, 9.08095)
mesh = SubResource("PrismMesh_ef4gd")
material = SubResource("StandardMaterial3D_xn3y2")

[node name="PrismArea3D" type="Area3D" parent="Prism"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.0296457, -0.126321, -0.00270081)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Prism/PrismArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0655653, 0.429607, 0)
shape = SubResource("SphereShape3D_drrlv")

[node name="Music ON" type="CSGMesh3D" parent="Prism"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.0296457, -0.126321, -0.00270081)
mesh = SubResource("TextMesh_uq5dt")

[node name="Box" type="CSGMesh3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.763394, 1.10037, 9.09119)
mesh = SubResource("BoxMesh_oceaa")
material = SubResource("StandardMaterial3D_r3tgb")

[node name="BoxArea3D" type="Area3D" parent="Box"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box/BoxArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.074048, -0.113036, -0.15284)
shape = SubResource("BoxShape3D_1hvea")

[node name="Music OFF" type="CSGMesh3D" parent="Box"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.139653, -1.13766, 0)
mesh = SubResource("TextMesh_xd4m3")
material = SubResource("StandardMaterial3D_niumq")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.41406, 0.811461, 9.27746)
visible = false
size = Vector3(0.218811, 0.187744, 0.344238)

[node name="Area3D" type="Area3D" parent="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.119975, 0.017688, 4.32917)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0381907, 0.0861616)
shape = SubResource("SphereShape3D_jh5xr")

[node name="Capsule" type="CSGMesh3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0822391, 0.69061, 9.09234)
mesh = SubResource("CapsuleMesh_qr43m")
material = SubResource("StandardMaterial3D_nqrq0")

[node name="Get Crazy" type="CSGMesh3D" parent="Capsule"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1.29705, 0.00133896)
mesh = SubResource("TextMesh_cixgh")

[node name="CapsuleArea3D" type="Area3D" parent="Capsule"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Capsule/CapsuleArea3D"]
shape = SubResource("CapsuleShape3D_apygw")

[node name="Tube" type="CSGMesh3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.391521, 0.745997, 9.17153)
mesh = SubResource("TubeTrailMesh_wk64y")
material = SubResource("StandardMaterial3D_msaaa")

[node name="Stop" type="CSGMesh3D" parent="Tube"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.128716, -1.32272, -0.26358)
mesh = SubResource("TextMesh_nqq8v")
material = SubResource("StandardMaterial3D_ws3ok")

[node name="TubeArea3D" type="Area3D" parent="Tube"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tube/TubeArea3D"]
shape = SubResource("CapsuleShape3D_3ip68")

[connection signal="area_entered" from="Torus/TorusArea3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Sphere/sphereArea3D" to="." method="_on_sphere_area_3d_area_entered"]
[connection signal="area_entered" from="Prism/PrismArea3D" to="." method="_on_prism_area_3d_area_entered"]
[connection signal="area_entered" from="Box/BoxArea3D" to="." method="_on_box_area_3d_area_entered"]
[connection signal="area_entered" from="Capsule/CapsuleArea3D" to="." method="_on_capsule_area_3d_area_entered"]
[connection signal="area_entered" from="Tube/TubeArea3D" to="." method="_on_tube_area_3d_area_entered"]
